--- a/2fa_dashboard_plugin/totp/templates/totp/_activate.html
+++ b/2fa_dashboard_plugin/totp/templates/totp/_activate.html
@@ -3,38 +3,10 @@
 
 {% block modal-header %}
 <h2>Activate Token</h2>
-{% if form.email_address.value != "MissingField" %}
-    <p/>
-    <p/><p/>
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">Activation - Step One</h3>
-      </div>
-      <div class="panel-body"><h4>An E-Mail has been sent here: "{{ form.email_address.value }}", with further instructions.</h4></div>
-    </div>
-    <p/>
-
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">Activation - Step Two</h3>
-      </div>
-      <div class="panel-body"><h4>Check your mail and scan the QRCode you'll find inside with Google Authenticator. Verify the code in the box below.</h4></div>
-    </div>
-    <p/>
-
-    <div class="panel panel-warning">
-      <div class="panel-heading">
-        <h3 class="panel-title">Attention!</h3>
-      </div>
-      <div class="panel-body"><h5>Allow a couple of minutes for the mail to be received by your ISP. If you have problems with authentication/verification, make sure your device time is synced with an NTP server and let 30 seconds pass before retrying.</h5></div>
-    </div>
-    <p/>
-
-{% else %}
     <p/>
     <div align="center"><span class="label label-info">Please scan this QRCode to begin setup.</span></div>
     <p/>
-    <div align="center"><img src="{{ form.seed.value }}/qr"></div>
+    <div align="center"><img src="{{ form.seed.value }}/qr" width="345" height="345"></div>
     <p/>
     <div class="panel panel-warning">
       <div class="panel-heading">
@@ -44,7 +16,6 @@
     </div>
     <p/>
 
-{% endif %}
 {% endblock %}
 
 {% block modal-body-right %}
