--- a/2fa_dashboard_plugin/totp/templates/totp/_regenerate.html
+++ b/2fa_dashboard_plugin/totp/templates/totp/_regenerate.html
@@ -6,7 +6,7 @@
     <p/>
     <div align="center"><span class="label label-info">Please scan this QRCode to add a new soft-token.</span></div>
     <p/>
-    <div align="center"><img src="{{ form.seed.value }}/qr"></div>
+    <div align="center"><img src="{{ form.seed.value }}/qr" width="345" height="345"></div>
     <p/>
     <div class="panel panel-warning">
       <div class="panel-heading">
