--- a/2fa_dashboard_plugin/totp/templates/totp/_activate.html
+++ b/2fa_dashboard_plugin/totp/templates/totp/_activate.html
@@ -13,7 +13,7 @@
         <h3 class="panel-title">Attention!</h3>
       </div>
       <div class="panel-body">
-	      <h5 style="color:Tomato;">1. After activating with 2FA, when login to Horizon, [password field]= password + otp token. For example: password=P4ssWord, otp token=121121, then password field should be: P4ssWord121121</h5>
+	      <h5 style="color:Tomato;">1. After 2FA enabled successful, when you login to Horizon: [password field] = [user password] + [totp token]. For example: [user password]=P4ssWord, [totp token]=121121, then password field should be: P4ssWord121121</h5>
 	      <h5>2. If you have problems with authentication/verification, make sure your device time is synced with an NTP server and let 30 seconds pass before retrying.</h5></div>
     </div>
     <p/>
